--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="shortcut icon" type="image/jpg" href="photos/clear_favicon.png">
+    <title> Kalicia Adams </title>
+    <link rel="icon" type="image/x-icon" href="/photos/clear_favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
-    
-    <title>Kalicia Adams</title>
 </head>
 <body>
     <header>
@@ -65,8 +64,9 @@
                         <h3>About Kalicia</h3>
                         <p>Kalicia grew up in Southern Utah and loves learning. She didn't grow up coding, but has always had an interest 
                             in computers from a young age. 
-                            Since starting her degree, she has been fascinated with software and web development. Recently, she completed
-                            Code School, a 9 week web development program, during the summer of 2021.
+                            Since starting her degree, she has been fascinated with software and web development. Over the summer of 2021, she completed
+                            Code School, a 9 week web development program. Kalicia is proficient in Python, HTML, CSS, Javascript, and has some experience with
+			   Vue.js, Vuetify, MongoDB, C, and C++. 
                             Go check out her projects on her portfolio page. 
                         </p>
                     </div>
