--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     
     <title>Portfolio - Kalicia Adams</title>
 </head>
-<body">
+<body>
     <header>
         <div class="top-bar">
             <div class="wrapper">
