updated information. Fixed and tweaked some formatting and style.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <title> Kalicia Adams </title>
+    <title> Kalicia Ashcraft </title>
     <link rel="icon" type="image/x-icon" href="/photos/clear_favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
         <div class="top-bar">
             <div class="wrapper">
                 <div class="top-flex">
-                    <h1><a href="index.html">Kalicia Adams</a></h1>
+                    <h1><a href="index.html">Kalicia Ashcraft</a></h1>
                     <nav>
                         <div class='top-nav'>
                             <div class="navigation">
@@ -37,7 +37,7 @@
                 <div class="hamburger-menu" id="menu">
                     <a href="index.html" class="items">Home</a>
                     <a href="portfolio.html" class="items">Portfolio</a>
-                    <p class="items">kaliciaadams1009@gmail.com</p>
+                    <p class="items">kalicia1009@gmail.com</p>
                     
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <div class="wrapper">
         <div class="wrapper-grid">
             <div class="welcome">
-                <p>Hello! My name is Kalicia Adams and I'm a Software Engineering major at Dixie State University. 
+                <p>Hello! My name is Kalicia Ashcraft and I'm a Computer Science major at Utah Tech University. 
                 Feel free to click around and get to know me more.</p>
                 <a href="portfolio.html"><div class="cta-btn">My Projects</div></a>
             </div>
@@ -59,16 +59,16 @@
         <div class="about">
             <div class="wrapper">
                 <div class="about-section">
-                    <img src="photos/IMG_2059.JPG" alt="Photo of Kalicia Adams" class="photos">
+                    <img src="photos/IMG_2059.JPG" alt="Photo of Kalicia Ashcraft" class="photos">
                     <div id="about-text-section">
                         <h3>About Kalicia</h3>
-                        <p>Kalicia grew up in Southern Utah and loves learning. She didn't grow up coding, but has always had an interest 
+                        <p class="sub-p">Kalicia grew up in Southern Utah and loves learning. She didn't grow up coding, but had an interest 
                             in computers from a young age. 
-                            Since starting her degree, she has been fascinated with software and web development. Over the summer of 2021, she completed
-                            Code School, a 9 week web development program. Kalicia is proficient in Python, HTML, CSS, Javascript, and has some experience with
-			   Vue.js, Vuetify, MongoDB, C, and C++. 
+                            Since starting her degree, she has been fascinated with software and web development. Kalicia is proficient in Python, HTML, CSS, Javascript, and has some experience with MongoDB, C, and C++, C#, and Java.
+                            Kalicia has interned for a few different companies including Utah Tech, SciTools, and Select Health. She is on track to graduate Spring 2024.
                             Go check out her projects on her portfolio page. 
                         </p>
+                        <p class="sub-p">Contact her at kalicia1009@gmail.com</p>
                     </div>
                     
                 </div>
